// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - UnorderedList renders empty list 1`] = `
<ul
  className="sc-bwzfXH cbqXRN"
/>
`;

exports[`Component - UnorderedList renders list with JSX items 1`] = `
<ul
  className="sc-bwzfXH cbqXRN"
>
  <li
    className="sc-bdVaJa gYVUxP"
  >
    <span>
      one
    </span>
  </li>
  <li
    className="sc-bdVaJa gYVUxP"
  >
    <span>
      two
    </span>
  </li>
</ul>
`;

exports[`Component - UnorderedList renders list with plain text items 1`] = `
<ul
  className="sc-bwzfXH cbqXRN"
>
  <li
    className="sc-bdVaJa gYVUxP"
  >
    one
  </li>
  <li
    className="sc-bdVaJa gYVUxP"
  >
    two
  </li>
</ul>
`;
